; ModuleID = '/home/carl/AnghaBench/tmux/extr_tty.c_tty_colours_us.c'
source_filename = "/home/carl/AnghaBench/tmux/extr_tty.c_tty_colours_us.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.tty = type { %struct.grid_cell }
%struct.grid_cell = type { i32 }

@COLOUR_FLAG_RGB = common dso_local global i32 0, align 4
@TTYC_SETULC = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.tty*, %struct.grid_cell*)* @tty_colours_us to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @tty_colours_us(%struct.tty* %0, %struct.grid_cell* %1) #0 {
  %3 = alloca %struct.tty*, align 8
  %4 = alloca %struct.grid_cell*, align 8
  %5 = alloca %struct.grid_cell*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  store %struct.tty* %0, %struct.tty** %3, align 8
  store %struct.grid_cell* %1, %struct.grid_cell** %4, align 8
  %10 = load %struct.tty*, %struct.tty** %3, align 8
  %11 = getelementptr inbounds %struct.tty, %struct.tty* %10, i32 0, i32 0
  store %struct.grid_cell* %11, %struct.grid_cell** %5, align 8
  %12 = load %struct.grid_cell*, %struct.grid_cell** %4, align 8
  %13 = getelementptr inbounds %struct.grid_cell, %struct.grid_cell* %12, i32 0, i32 0
  %14 = load i32, i32* %13, align 4
  %15 = xor i32 %14, -1
  %16 = load i32, i32* @COLOUR_FLAG_RGB, align 4
  %17 = and i32 %15, %16
  %18 = icmp ne i32 %17, 0
  br i1 %18, label %19, label %20

19:                                               ; preds = %2
  br label %41

20:                                               ; preds = %2
  %21 = load %struct.grid_cell*, %struct.grid_cell** %4, align 8
  %22 = getelementptr inbounds %struct.grid_cell, %struct.grid_cell* %21, i32 0, i32 0
  %23 = load i32, i32* %22, align 4
  %24 = call i32 @colour_split_rgb(i32 %23, i32* %7, i32* %8, i32* %9)
  %25 = load i32, i32* %7, align 4
  %26 = mul nsw i32 65536, %25
  %27 = load i32, i32* %8, align 4
  %28 = mul nsw i32 256, %27
  %29 = add nsw i32 %26, %28
  %30 = load i32, i32* %9, align 4
  %31 = add nsw i32 %29, %30
  store i32 %31, i32* %6, align 4
  %32 = load %struct.tty*, %struct.tty** %3, align 8
  %33 = load i32, i32* @TTYC_SETULC, align 4
  %34 = load i32, i32* %6, align 4
  %35 = call i32 @tty_putcode1(%struct.tty* %32, i32 %33, i32 %34)
  %36 = load %struct.grid_cell*, %struct.grid_cell** %4, align 8
  %37 = getelementptr inbounds %struct.grid_cell, %struct.grid_cell* %36, i32 0, i32 0
  %38 = load i32, i32* %37, align 4
  %39 = load %struct.grid_cell*, %struct.grid_cell** %5, align 8
  %40 = getelementptr inbounds %struct.grid_cell, %struct.grid_cell* %39, i32 0, i32 0
  store i32 %38, i32* %40, align 4
  br label %41

41:                                               ; preds = %20, %19
  ret void
}

declare dso_local i32 @colour_split_rgb(i32, i32*, i32*, i32*) #1

declare dso_local i32 @tty_putcode1(%struct.tty*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
